small changes to build in vscode